LeadManagementProject/force-app/main/default/objects/Lead/fields/CountryCapital__c.field-meta.xml
<CustomField>
    <fullName>CountryCapital__c</fullName>
    <description>Lead Country Capital</description>
    <label>Country Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>