LeadManagementProject/force-app/main/default/objects/Lead/fields/Owner_Since__c.field-meta.xml
<CustomField>
    <fullName>Owner_Since__c</fullName>
    <description>Timestamp of Lead owner assignment</description>
    <label>Owner Since</label>
    <type>DateTime</type>
</CustomField>