LeadManagementProject/force-app/main/default/objects/Lead/validationRules/LeadFieldsBeforeOwnerTransfer.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadFieldsBeforeOwnerTransfer</fullName>
    <active>true</active>
    <description>Don&apos;t allow to change owner unless Country, Lead Source and No. of Employees are filled in</description>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    OR(
        AND(
            $Profile.Name = &apos;Contract Manager&apos;,
            ISBLANK(Country),
            ISPICKVAL(LeadSource, &apos;&apos;)
        ),
        AND(
            $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
            $Profile.Name &lt;&gt; &apos;Contract Manager&apos;,
            OR(
                ISBLANK(Country),
                ISPICKVAL(LeadSource, &apos;&apos;),
                ISBLANK(NumberOfEmployees)
            )
        ),
AND($Profile.Name = &apos;System Administrator&apos;, ISPICKVAL(LeadSource, &apos;&apos;))
    )
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Before to change the Owner, please fill in the Country, Lead Source and No. of Employees</errorMessage>
</ValidationRule>